more functionality added
most of the functionality has now been added. some refining tweaks
needed to make sure it acts as a calculator should.

will need to make it so the operator buttons can be used after
a click of the equals buttons.

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,12 @@
         <div id="display-container">
             <input type="text" id="display" placeholder="0">
         </div>
+        <div id="operators-container">
+            <button type="button" class="buttons operators" id="plus">+</button>
+            <button type="button" class="buttons operators" id="subtract">-</button>
+            <button type="button" class="buttons operators" id="multiply">*</button>
+            <button type="button" class="buttons operators" id="divide">/</button>
+        </div>
         <div id="buttons-container">
             <div id="num-buttons-container">    
                 <button type="button" class="buttons num">1</button>
