all major fatures and options added.
some extra credit been done, no backspace button, no keyboard support.
may revisit at later date to add these features.

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="display-container">
-            <input type="text" id="display" placeholder="0">
+            <input type="text" id="display" placeholder="0" maxlength="15">
         </div>
         <div id="operators-container">
             <button type="button" class="buttons operators" id="plus">+</button>
